--- a/mastodon/ubos-manifest.json
+++ b/mastodon/ubos-manifest.json
@@ -5,7 +5,8 @@
         "apache2" : {
             "fixedcontext" : "",
             "depends" : [
-                "npm"
+                "npm",
+                "postfix"
             ],
             "apache2modules" : [
                 "headers",
@@ -98,7 +99,6 @@
                         "${appconfig.datadir}/mastodon/Gemfile",
                         "${appconfig.datadir}/mastodon/Gemfile.lock",
                         "${appconfig.datadir}/mastodon/lib",
-                        "${appconfig.datadir}/mastodon/log",
                         "${appconfig.datadir}/mastodon/node_modules",
                         "${appconfig.datadir}/mastodon/package.json",
                         "${appconfig.datadir}/mastodon/public",
@@ -150,10 +150,17 @@
                     "retentionbucket"  : "system"
                 },
                 {
-                    "type"             : "file",
-                    "name"             : "${appconfig.datadir}/mastodon/.env.production",
-                    "template"         : "tmpl/production.env.tmpl",
-                    "templatelang"     : "varsubst"
+                    "type"         : "perlscript",
+                    "source"       : "bin/generate-production-env.pl"
+                },
+                {
+                    "type"         : "perlscript",
+                    "source"       : "bin/create-logdir.pl"
+                },
+                {
+                    "type"         : "symlink",
+                    "name"         : "${appconfig.datadir}/mastodon/log",
+                    "source"       : "/var/log/mastodon-${appconfig.appconfigid}"
                 },
                 {
                     "type"         : "systemd-service",
@@ -170,6 +177,12 @@
                 {
                     "type"         : "systemd-service",
                     "name"         : "mastodon-streaming@${appconfig.appconfigid}",
+                }
+            ],
+            "installers" : [
+                {
+                    "type"   : "perlscript",
+                    "source" : "bin/create-admin-user.pl"
                 }
             ]
         },
@@ -202,10 +215,7 @@
     "customizationpoints" : {
         "singleusermode" : {
             "type"        : "boolean",
-            "required"    : false,
-            "default" : {
-                "value" : true
-            }
+            "required"    : true
         },
         "defaultlocale" : {
             "type"        : "string",
@@ -236,6 +246,20 @@
             "private"     : true,
             "default" : {
                 "expression" : "${randomHex(128)}"
+            }
+        },
+        "email_domain_blacklist" : {
+            "type"     : "string",
+            "required" : false,
+            "default" : {
+                "value" : ""
+            }
+        },
+        "email_domain_whitelist" : {
+            "type"     : "string",
+            "required" : false,
+            "default" : {
+                "value" : ""
             }
         }
     }
