--- a/mastodon/systemd/mastodon-redis@.service
+++ b/mastodon/systemd/mastodon-redis@.service
@@ -3,6 +3,9 @@ Description=Advanced key-value store, configured for Mastodon
 After=network.target
 
 [Service]
+ExecStartPre=/usr/share/ubos-admin/bin/ubos-service-prestart mastodon-redis@%I
+ExecStopPost=/usr/share/ubos-admin/bin/ubos-service-poststop mastodon-redis@%I
+
 Type=simple
 User=mastodon
 Group=mastodon
