--- a/mastodon/PKGBUILD
+++ b/mastodon/PKGBUILD
@@ -52,36 +52,33 @@ build() {
 
 package() {
 # Manifest
-    mkdir -p ${pkgdir}/var/lib/ubos/manifests
-    install -m0644 ${startdir}/ubos-manifest.json ${pkgdir}/var/lib/ubos/manifests/${pkgname}.json
+    install -D -m0644 ${startdir}/ubos-manifest.json ${pkgdir}/ubos/lib/ubos/manifests/${pkgname}.json
 
 # Icons
-    mkdir -p ${pkgdir}/srv/http/_appicons/${pkgname}
-    install -m644 ${startdir}/appicons/{72x72,144x144}.png ${pkgdir}/srv/http/_appicons/${pkgname}/
+    install -D -m0644 ${startdir}/appicons/{72x72,144x144}.png ${pkgdir}/ubos/http/_appicons/${pkgname}/
 
 # Templates
-    install -D -m 644 ${startdir}/tmpl/*.tmpl -t ${pkgdir}/usr/share/${pkgname}/tmpl/
+    install -D -m0644 ${startdir}/tmpl/*.tmpl -t ${pkgdir}/ubos/share/${pkgname}/tmpl/
 
 # Config files
     mkdir -p ${pkgdir}/etc/${pkgname}
 
 # Systemd
-    install -D -m 644 ${startdir}/systemd/*.{service,target} -t ${pkgdir}/usr/lib/systemd/system/
-    install -D -m 644 ${startdir}/etc/sysusers.d/mastodon.conf -t ${pkgdir}/etc/sysusers.d/
+    install -D -m0644 ${startdir}/systemd/*.{service,target}   -t ${pkgdir}/usr/lib/systemd/system/
+    install -D -m0644 ${startdir}/etc/sysusers.d/mastodon.conf -t ${pkgdir}/etc/sysusers.d/
 
 # Data
-    mkdir -p ${pkgdir}/var/lib/${pkgname}
+    mkdir -p ${pkgdir}/ubos/lib/${pkgname}
 
 # Cache
     mkdir -p ${pkgdir}/var/cache/mastodon
 
 # Code
-    mkdir -p ${pkgdir}/usr/share/${pkgname}/bin
-    install -m755 ${startdir}/bin/* -t ${pkgdir}/usr/share/${pkgname}/bin/
-    mkdir -p ${pkgdir}/usr/share/${pkgname}/mastodon
-    cp -a ${srcdir}/${pkgname}-${pkgver}/* ${pkgdir}/usr/share/${pkgname}/mastodon/
-    cp -a ${srcdir}/${pkgname}-${pkgver}/.bundle ${pkgdir}/usr/share/${pkgname}/mastodon/
+    install -D -m0755 ${startdir}/bin/* -t ${pkgdir}/ubos/share/${pkgname}/bin/
+    mkdir -p ${pkgdir}/ubos/share/${pkgname}/mastodon
+    cp -a ${srcdir}/${pkgname}-${pkgver}/*       ${pkgdir}/ubos/share/${pkgname}/mastodon/
+    cp -a ${srcdir}/${pkgname}-${pkgver}/.bundle ${pkgdir}/ubos/share/${pkgname}/mastodon/
 
 # Add UBOS rake tasks
-    install -m644 ${startdir}/ubos.rake ${pkgdir}/usr/share/${pkgname}/mastodon/lib/tasks/ubos.rake
+    install -m644 ${startdir}/ubos.rake ${pkgdir}/ubos/share/${pkgname}/mastodon/lib/tasks/ubos.rake
 }
