--- a/mastodon/PKGBUILD
+++ b/mastodon/PKGBUILD
@@ -65,7 +65,7 @@ package() {
 
 # Systemd
     install -D -m0644 ${startdir}/systemd/*.{service,target}   -t ${pkgdir}/usr/lib/systemd/system/
-    install -D -m0644 ${startdir}/etc/sysusers.d/mastodon.conf -t ${pkgdir}/etc/sysusers.d/
+    install -D -m0644 ${startdir}/mastodon.conf -t ${pkgdir}/etc/sysusers.d/
 
 # Data
     mkdir -p ${pkgdir}/ubos/lib/${pkgname}
