--- a/mastodon/ubos-manifest.json
+++ b/mastodon/ubos-manifest.json
@@ -228,6 +228,7 @@
             "type"        : "password",
             "required"    : false,
             "private"     : true,
+            "regex"       : "[0-9a-f]{128}",
             "default" : {
                 "expression" : "${randomHex(128)}"
             }
@@ -236,6 +237,7 @@
             "type"        : "password",
             "required"    : false,
             "private"     : true,
+            "regex"       : "[0-9a-f]{128}",
             "default" : {
                 "expression" : "${randomHex(128)}"
             }
@@ -244,6 +246,7 @@
             "type"        : "password",
             "required"    : false,
             "private"     : true,
+            "regex"       : "[0-9a-f]{128}",
             "default" : {
                 "expression" : "${randomHex(128)}"
             }
