--- a/mastodon/PKGBUILD
+++ b/mastodon/PKGBUILD
@@ -2,8 +2,8 @@ developer=https://github.com/tootsuite/mastodon
 url=${developer}
 maintainer=http://indiecomputing.com/
 pkgname=$(basename $(pwd))
-pkgver=2.3.3
-pkgrel=4
+pkgver=2.5.0
+pkgrel=1
 pkgdesc="Decentralized microblogging"
 arch=('any')
 license=("AGPL3")
@@ -27,13 +27,13 @@ makedepends=(
     'yarn'
 )
 options=('!strip')
-sha512sums=('7ac64356d9df4d1b449f2f6bbff5fb5013cf8f07f87ce7feadd4bb6676da8c605dd922da50bf28b24094e225fc6599179d0ccbe8c858dd6b7a4c97936560596a')
+sha512sums=('cfdf71808405263ac78960c3863850f4961a773f6a55e9e28fea45812db867ff6b13edffbfd8ecf985b123e9f853d251bb451b0580ededc357637c4abaa0d972')
 install=install
 
-prepare() {
-    cd ${srcdir}/${pkgname}-${pkgver}
-	patch -p0 < ${startdir}/upgrade-charlock-holmes.patch
-}
+# prepare() {
+#     cd ${srcdir}/${pkgname}-${pkgver}
+#   patch -p0 < ${startdir}/upgrade-charlock-holmes.patch
+# }
 
 build() {
     cd ${srcdir}/${pkgname}-${pkgver}
@@ -51,7 +51,8 @@ build() {
     perl -pi -e "s!^(\s*)#\s*(config\.secret_key\s*=\s*).*\$!\1\2'$deviseSecretKey'!" config/initializers/devise.rb
 
     echo Running bundle exec
-    RAILS_ENV=production OTP_SECRET=xxx bundle exec rails assets:precompile
+    RAILS_ENV=production OTP_SECRET=precompile_placeholder SECRET_KEY_BASE=precompile_placeholder bundle exec rails assets:precompile
+    # Those OTP_SECRET and SECRET_KEY_BASE are from the Dockerfile
 
     # Make a few changes
     perl -pi -e "s!cache_dir:.*\$!cache_dir: '/var/cache/' + ENV['APPCONFIGID'],!" config/boot.rb
