--- a/mastodon/PKGBUILD
+++ b/mastodon/PKGBUILD
@@ -46,6 +46,7 @@ build() {
     bundle install --path vendor/bundle -j$(getconf _NPROCESSORS_ONLN) --deployment --without development test
 
     echo Running yarn install
+    yarn config set ignore-engines true
     yarn install --pure-lockfile
 
     # We need this here otherwise asset precompilation fails. However, we need to
