Track upstream Clear cache upon upgrade

--- a/mastodon/ubos-manifest.json
+++ b/mastodon/ubos-manifest.json
@@ -176,6 +176,12 @@
                     "type"   : "perlscript",
                     "source" : "bin/create-admin-user.pl"
                 }
+            ],
+            "upgraders" : [
+                {
+                    "type"   : "perlscript",
+                    "source" : "bin/clear-cache.pl"
+                }
             ]
         },
         "postgresql" : {
