Track upstream and make work again

--- a/mastodon/ubos-manifest.json
+++ b/mastodon/ubos-manifest.json
@@ -221,6 +221,11 @@
                 {
                     "type"   : "perlscript",
                     "name"   : "maindb",
+                    "source" : "bin/db-pre-migrate.pl"
+                },
+                {
+                    "type"   : "perlscript",
+                    "name"   : "maindb",
                     "source" : "bin/db-migrate.pl"
                 }
             ]
