--- a/mastodon/PKGBUILD
+++ b/mastodon/PKGBUILD
@@ -2,9 +2,9 @@ developer=https://github.com/tootsuite/mastodon
 url=${developer}
 maintainer=http://indiecomputing.com/
 pkgname=$(basename $(pwd))
-pkgver=3.3.0
+pkgver=3.4.1
 # When updating this, also update the node version in mastodon-streaming@.service
-pkgrel=2
+pkgrel=1
 pkgdesc="Decentralized microblogging"
 arch=('any')
 license=("AGPL3")
@@ -36,7 +36,7 @@ makedepends=(
 )
 options=('!strip')
 install=install
-sha512sums=('98abde15d7b547f5aa913810a7b743bef181d74b163747fb18096fe82c4f6d0f24b223dd433a7edc4edf3cd08c0c3c9ad7eaceaa96f1a85709825382fee67314')
+sha512sums=('2c3828c0c8eda45782129c2adcce791a1fa0422be7ec3dd25bf87c9a6407872b36a842365ee0ff9b4d0cbabbb5c129e4d42c8ba695aac329021f6efe18d3c5d3')
 
 # Use NVM
 # Note: NVM_DIR must be an absolute path name without a trailing slash, otherwise
@@ -46,27 +46,23 @@ NODE_VERSION="--lts=erbium"
 
 prepare() {
     cd ${srcdir}/${pkgname}-${pkgver}
-
+    patch -p0 < ${startdir}/rexml.patch
     NVM_DIR=$(pwd)/nvm nvm install ${NODE_VERSION}
+
+    # Allow use of any bundler
+    sed -i -e '/BUNDLED/,+1d' Gemfile.lock
 }
 
 build() {
-    # Determine version outside of directory within Gemfile.lock
-    bundleVer=$(bundle --version | cut -d' '  -f3)
     cd ${srcdir}/${pkgname}-${pkgver}
 
     export NVM_DIR=$(pwd)/nvm
 
-    echo Updating Gemfile.lock
-    sed -i "s/1.17.3/$bundleVer/g" Gemfile.lock
-    # sed -i "s/fuubar (2\.4\.0)/fuubar (2\.4\.1)/" Gemfile.lock
+    bundle config set deployment 'true'
+    bundle config set without 'development test'
+    bundle install -j$(getconf _NPROCESSORS_ONLN)
 
-    echo Running bundle install
-    bundle install --path vendor/bundle --no-deployment
-    bundle install --path vendor/bundle -j$(getconf _NPROCESSORS_ONLN) --deployment --without development test
-
-    echo Running yarn install
-    yarn config set ignore-engines true
+    # yarn config set ignore-engines true
     yarn install --pure-lockfile
 
     # We need this here otherwise asset precompilation fails. However, we need to
@@ -74,7 +70,7 @@ build() {
     deviseSecretKey=$(perl -MUBOS::Utils -e 'print UBOS::Utils::randomHex(64);')
     perl -pi -e "s!^(\s*)#\s*(config\.secret_key\s*=\s*).*\$!\1\2'$deviseSecretKey'!" config/initializers/devise.rb
 
-    echo Running bundle exec
+    echo Running bundle exec rails assets:precompile
     RAILS_ENV=production OTP_SECRET=precompile_placeholder SECRET_KEY_BASE=precompile_placeholder bundle exec rails assets:precompile
     # Those OTP_SECRET and SECRET_KEY_BASE are from the Dockerfile
 
