--- a/mastodon/ubos-manifest.json
+++ b/mastodon/ubos-manifest.json
@@ -134,24 +134,22 @@
                     "dirpermissions"   : "preserve",
                     "names"            : [
                         "500.html",
-                        "android-chrome-192x192.png",
-                        "apple-touch-icon.png",
                         "assets",
                         "avatars",
                         "badge.png",
-                        "browserconfig.xml",
                         "embed.js",
                         "emoji",
-                        "favicon-dev.ico",
                         "favicon.ico",
                         "headers",
-                        "mask-icon.svg",
-                        "mstile-150x150.png",
+                        "inert.css",
+                        "ocr",
                         "oops.gif",
+                        "oops.png",
                         "packs",
                         "robots.txt",
                         "sounds",
                         "sw.js",
+                        "sw.js.map",
                         "web-push-icon_expand.png",
                         "web-push-icon_favourite.png",
                         "web-push-icon_reblog.png"
