--- a/mastodon/PKGBUILD
+++ b/mastodon/PKGBUILD
@@ -5,12 +5,10 @@ pkgname=$(basename $(pwd))
 pkgver=4.1.2
 # When updating this, also update the node version in mastodon-streaming@.service
 pkgrel=1
-pkgdesc="Decentralized microblogging"
+pkgdesc="Your self-hosted, globally interconnected microblogging community"
 arch=('any')
 license=("AGPL3")
-# source=("${pkgname}-${pkgver}::git+https://github.com/mastodon/mastodon.git#tag=v${pkgver}")
-# source=("https://github.com/mastodon/mastodon/archive/refs/tags/v${pkgver}.tar.gz")
-source=("${pkgname}-v${pkgver}.tar.gz::https://codeload.github.com/mastodon/mastodon/tar.gz/refs/tags/v${pkgver}")
+source=("${pkgname}-v${pkgver}.tar.gz::https://github.com/mastodon/mastodon/archive/v${pkgver}.tar.gz")
 releasepage=('https://github.com/mastodon/mastodon/releases')
 depends=(
     'ffmpeg'
@@ -54,6 +52,8 @@ prepare() {
 
     corepack enable
     yarn set version classic
+
+    echo "gem 'psych', '< 4'" >> Gemfile
 }
 
 build() {
@@ -61,7 +61,9 @@ build() {
 
     export NVM_DIR=$(pwd)/nvm
 
-    bundle config set deployment 'true'
+    bundle config set --local path 'vendor/bundle'
+    # bundle config set deployment 'true'
+    bundle config unset deployment
     bundle config set without 'development test'
     bundle install -j$(getconf _NPROCESSORS_ONLN)
 
@@ -73,7 +75,13 @@ build() {
     perl -pi -e "s!^(\s*)#\s*(config\.secret_key\s*=\s*).*\$!\1\2'$deviseSecretKey'!" config/initializers/devise.rb
 
     echo Running bundle exec rails assets:precompile
-    RAILS_ENV=production OTP_SECRET=precompile_placeholder SECRET_KEY_BASE=precompile_placeholder bundle exec rails assets:precompile
+    RAILS_ENV=production \
+    NODE_ENV=production \
+    RAILS_SERVE_STATIC_FILES=true \
+    OTP_SECRET=precompile_placeholder \
+    SECRET_KEY_BASE=precompile_placeholder \
+    bundle exec rails assets:precompile
+
     # Those OTP_SECRET and SECRET_KEY_BASE are from the Dockerfile
 
     # Make a few changes
@@ -114,4 +122,7 @@ package() {
 
 # Add UBOS rake tasks
     install -m644 ${startdir}/ubos.rake ${pkgdir}/ubos/share/${pkgname}/mastodon/lib/tasks/ubos.rake
+
+# Remove unnecessary build output files
+    # rm -r $(find ${pkgdir} -name mkmf.log -or -name gem_make.out -or -name gem.build_complete -or -name .git -or -name .cache) ${pkgdir}/ubos/share/mastodon/mastodon/tmp
 }
