--- a/mastodon/ubos-manifest.json
+++ b/mastodon/ubos-manifest.json
@@ -203,11 +203,12 @@
         "postgresql" : {
             "appconfigitems" : [
                 {
-                    "type"             : "database",
-                    "name"             : "maindb",
-                    "retentionpolicy"  : "keep",
-                    "retentionbucket"  : "maindb",
-                    "privileges"       : "*"
+                    "type"              : "database",
+                    "name"              : "maindb",
+                    "retentionpolicy"   : "keep",
+                    "retentionbucket"   : "maindb",
+                    "defaultprivileges" : "all privileges",
+                    "privileges"        : "create"
                 }
             ],
             "installers" : [
